app-big-canary-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: edge-server-cv-canary
  labels:
    app: edge-server-cv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-server-cv
  template:
    metadata:
      labels:
        app: edge-server-cv
        version: "2.0"
    spec:
      containers:
      - image: dspatharakis/controller_druidnet:edge-server
        name: edge-server-cv
        resources:
          requests:
            cpu: "1000m"
            memory: "2000Mi"
          limits:
            cpu: "1000m"
            memory: "2000Mi"
        ports:
        - name: es-port
          containerPort: 8000
        imagePullPolicy: Never
