app-small-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: edge-server-cx
  labels:
    app: edge-server-cx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-server-cx
  template:
    metadata:
      labels:
        app: edge-server-cx
    spec:
      containers:
      - image: dspatharakis/controller_druidnet:edge-server
        name: edge-server-cx
        resources:
          requests:
            cpu: "1000m"
            memory: "2000Mi"
          limits:
            cpu: "1000m"
            memory: "2000Mi"
        ports:
        - name: es-port
          containerPort: 8000
        imagePullPolicy: Never
