edge-server-deployment-small.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: edge-server-cv
  labels:
    app: edge-server-cv
spec:
  replicas: 3
  selector:
    matchLabels:
      app: edge-server-cv
  template:
    metadata:
      labels:
        app: edge-server-cv
    spec:
      containers:
      - image: dspatharakis/controller_druidnet:edge-server
        name: edge-server-cv
        resources:
          requests:
            cpu: "2000m"
            memory: "4000Mi"
          limits:
            cpu: "2000m"
            memory: "4000Mi"
        ports:
        - name: es-port
          containerPort: 8000
        imagePullPolicy: Never
