app-big-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-server-cv
  labels:
    app: edge-server-cv
spec:
  ports:
  - name: edge-server-cv-port
    port: 6004
    nodePort: 30796
    targetPort: 8000
  selector:
    app: edge-server-cv
  type: NodePort
