app-small-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-server-cx
  labels:
    app: edge-server-cx
spec:
  ports:
  - name: edge-server-cx-port
    port: 6004
    nodePort: 30797
    targetPort: 8000
  selector:
    app: edge-server-cx
  type: NodePort
