edge-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-server-cv
  labels:
    app: edge-server-cv
spec:
  ports:
  - name: es-port
    port: 8000
    nodePort: 30800
    targetPort: 8000
  selector:
    app: edge-server-cv
  type: NodePort
