ingress-big.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edge-server-cv-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: edge-server-cv.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-server-cv
                port:
                  number: 6004
