ingress-small.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edge-server-cv-ingress-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
    - host: edge-server-cv.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-server-cx
                port:
                  number: 6004
