istio-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-service-ingress
spec:
  hosts: 
  - '*'
  gateways:
  - echo-gateway
  http:
  - route:
    - destination:
        host: edge-server-cv
      weight: 75
    - destination:
        host: edge-server-cx
      weight: 25
